# cetlib-except

./: CMakeLists.txt  CMakePresets.json  genindex.html  index.html  latest  objects.inv  search.html  searchindex.js  versions.json
_sources/: index.rst.txt
cetlib_except/test/: exception_bad_append_t.cc
doc/: CMakeLists.txt  common-conf.py.in  conf.py.in  landing-bottom.rst  landing-conf.py.in  landing-top.rst  publish-reference-index.rst.m4  reference-api.rst  reference-conf.py.in  reference-index.rst.m4  release-notes
doc/landing-templates/: layout.html
doc/reference/: api.rst
doc/reference-templates/: breadcrumbs.html  layout.html
docs/: CMakeLists.txt  conf.py.in
docs/_extensions/: redmineRoles.py
git-develop/: api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
git-develop/_sources/: index.rst.txt
git-develop/_static/: FNALssi-cpp.css  documentation_options.js
ups/: product_deps
